syntax = "proto3";

package Data;

service DataStream {
    rpc StreamData(DataRequest) returns (stream DataResponse) {}
}

message DataRequest {
    float lambda_arriv = 1;
}
message DataResponse {
    string time = 1;
    double interarrival = 2;
    string service = 3;
}